cmake_minimum_required(VERSION 3.0)
get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${PROJECT_NAME} LANGUAGES C CXX)
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 11)
include_directories(source)
aux_source_directory(source SOURCE_DIR)
# if(WIN32)
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32)
endif()
if(MSVC)
    add_compile_options(/utf-8)
endif()
add_executable(${PROJECT_NAME} ${SOURCE_DIR})
